--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
 
     <section class="container-fluid">
         <div class="container">
-            <div id="coverPage" class="d-flex row align-items-center justify-content-center">
+            <!--div id="coverPage" class="d-flex row align-items-center justify-content-center">
                 <div class="">
                     <img src="assets/img/coverpage.png" alt="">
                 </div>
-            </div>
+            </div-->
 
             <!--roulette-->
-            <div >
-                <div class="container_roulette">
+            <div class="d-flex row align-items-center justify-content-center justify">
+                <div id="roulette" class="container_roulette" hidden>
                     <div class="roulette">
                     </div>
                     <button class="spinner"><span>SPIN!</span><div class="pointer"></div></button>  
                 </div>
             </div>
 
-            <div id="content" hidden>
-                
+            <div id="content" hidden>  
+                <div id="question_div">  </div>
             </div>
         </div>
     </section>
