show question and answer not saving data

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <div id="content" hidden>  
+            <div id="content"  class="d-flex row align-items-center justify-content-center" hidden>  
                 <div id="question_div">  </div>
             </div>
         </div>
