--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trivia</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -21,7 +19,7 @@
             </div-->
 
             <!--roulette-->
-            <div class="d-flex row align-items-center justify-content-center justify">
+            <div class="d-flex row align-items-center justify">
                 <div id="roulette" class="container_roulette" hidden>
                     <div class="roulette">
                     </div>
@@ -29,12 +27,11 @@
                 </div>
             </div>
 
-            <div id="content"  class="d-flex row align-items-center justify-content-center" hidden>  
-                <div id="question_div">  </div>
+            <div id="content"  class="d-flex row align-items-center justify" hidden>  
+                <!--div id="question_div">  </div-->
             </div>
         </div>
     </section>
-    
 
     <!--roulette-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
@@ -42,9 +39,7 @@
     <script src="assets/js/main.js"></script>
 
     <!--bootstrap 4-->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     
 </body>
