saving Answers completed

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                 </div>
             </div>
 
-            <div id="content"  class="d-flex row align-items-center justify" hidden>  
-                <!--div id="question_div">  </div-->
-            </div>
+            <div id="content"  class="d-flex row align-items-center justify" hidden>  </div>
         </div>
     </section>
 
