--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trivia</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/sweetalert.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -39,6 +40,7 @@
     <!--bootstrap 4-->
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
+    <script src="assets/js/sweetalert.min.js"></script>
     
 </body>
 </html>
