--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
             </div-->
 
             <!--roulette-->
-            <div class="d-flex row align-items-center justify">
+            <h3 class="upperCase archivo text-center" id="title" hidden>Put your Knowledge to the test</h3>
+            <div class="justify" id="outside_div">
                 <div id="roulette" class="container_roulette" hidden>
                     <div class="roulette">
                     </div>
                     <button class="spinner"><span>SPIN!</span><div class="pointer"></div></button>  
                 </div>
             </div>
-
-            <div id="content"  class="d-flex row align-items-center justify" hidden>  </div>
+            
+            <div id="content" hidden>  </div>
         </div>
     </section>
 
