--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     </section>
 
     <!--roulette-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script-->
+    <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/jquery.fortune.min.js"></script>
     <script src="assets/js/main.js"></script>
 
     <!--bootstrap 4-->
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/sweetalert.min.js"></script>
     
 </body>
