--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             </div-->
 
             <!--roulette-->
-            <h3 class="upperCase archivo text-center" id="title" hidden>Put your Knowledge to the test</h3>
+            <h3 class="upperCase archivo text-center" id="title" hidden style="margin-top: 40px;">Put your Knowledge to the test</h3>
             <div class="justify" id="outside_div">
                 <div id="roulette" class="container_roulette" hidden>
                     <div class="roulette">
                     </div>
-                    <button class="spinner"><span>SPIN!</span><div class="pointer"></div></button>  
+                    <button class="spinner"><span>SPIN!</span><div class="pointer"></div></button>
                 </div>
             </div>
-            
+
             <div id="content" hidden>  </div>
         </div>
     </section>
@@ -42,6 +42,6 @@
     <!--bootstrap 4-->
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/sweetalert.min.js"></script>
-    
+
 </body>
 </html>
